add go doc for photo endpoints in mygram.
